--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -395,7 +395,8 @@ ndn_cpp_cpp_headers = \
   $(wildcard ndn-ind/sync/*.*) \
   $(wildcard ndn-ind/tools/usersync/*.*) \
   $(wildcard ndn-ind/transport/*.*) \
-  $(wildcard ndn-ind/util/*.*)
+  $(wildcard ndn-ind/util/*.*) \
+  $(wildcard ndn-ind/util/impl/*.*)
 
 
 # Public ndn-ind-tools C++ headers.
