Makefile: Link to lboost_chrono, if present.

--- a/configure.ac
+++ b/configure.ac
@@ -70,6 +70,7 @@ AC_C_INLINE
 AX_BOOST_BASE([1.48])
 
 AX_BOOST_ASIO
+AX_BOOST_CHRONO
 
 AC_MSG_CHECKING([for std::shared_ptr])
 AC_COMPILE_IFELSE([AC_LANG_PROGRAM(
