--- a/log4cxx.properties
+++ b/log4cxx.properties
@@ -1,4 +1,4 @@
-# Set root logger level to TRACE and its only appender to A1.
+# Set root logger level to INFO and its only appender to A1.
 # To turn off logging, change INFO to FATAL.
 log4j.rootLogger=INFO, A1
 #, rollingFile
