--- a/log4cxx.properties
+++ b/log4cxx.properties
@@ -1,6 +1,6 @@
 # Set root logger level to INFO and its only appender to A1.
 # To turn off logging, change INFO to FATAL.
-log4j.rootLogger=INFO, A1
+log4j.rootLogger=WARN, A1
 #, rollingFile
 
 # A1 is set to be a ConsoleAppender.
