--- a/log4cxx.properties
+++ b/log4cxx.properties
@@ -1,5 +1,5 @@
 # Set root logger level to INFO and its only appender to A1.
-# To turn off logging, change INFO to FATAL.
+# To turn off logging, change WARN to FATAL.
 log4j.rootLogger=WARN, A1
 #, rollingFile
 
