encoding: Added support for Tlv0_3WireFormat.

--- a/Makefile.am
+++ b/Makefile.am
@@ -147,6 +147,7 @@ ndn_ind_cpp_headers = \
   include/ndn-ind/encoding/tlv-0_1-wire-format.hpp \
   include/ndn-ind/encoding/tlv-0_1_1-wire-format.hpp \
   include/ndn-ind/encoding/tlv-0_2-wire-format.hpp \
+  include/ndn-ind/encoding/tlv-0_3-wire-format.hpp \
   include/ndn-ind/encoding/tlv-wire-format.hpp \
   include/ndn-ind/encoding/wire-format.hpp \
   include/ndn-ind/encrypt/access-manager-v2.hpp \
@@ -189,6 +190,7 @@ ndn_ind_cpp_headers = \
   include/ndn-ind/lite/encoding/element-listener-lite.hpp \
   include/ndn-ind/lite/encoding/tlv-0_1_1-wire-format-lite.hpp \
   include/ndn-ind/lite/encoding/tlv-0_2-wire-format-lite.hpp \
+  include/ndn-ind/lite/encoding/tlv-0_3-wire-format-lite.hpp \
   include/ndn-ind/lite/encrypt/encrypted-content-lite.hpp \
   include/ndn-ind/lite/encrypt/algo/aes-algorithm-lite.hpp \
   include/ndn-ind/lite/encrypt/algo/des-algorithm-lite.hpp \
@@ -330,6 +332,7 @@ libndn_c_la_SOURCES = ${ndn_ind_c_headers} \
   src/c/encoding/element-listener.h \
   src/c/encoding/element-reader.c src/c/encoding/element-reader.h \
   src/c/encoding/tlv-0_2-wire-format_c.c src/c/encoding/tlv-0_2-wire-format.h \
+  src/c/encoding/tlv-0_3-wire-format_c.c src/c/encoding/tlv-0_3-wire-format.h \
   src/c/encoding/tlv/tlv-control-parameters.c src/c/encoding/tlv/tlv-control-parameters.h \
   src/c/encoding/tlv/tlv-control-response.c src/c/encoding/tlv/tlv-control-response.h \
   src/c/encoding/tlv/tlv-data.c src/c/encoding/tlv/tlv-data.h \
@@ -400,6 +403,7 @@ libndn_ind_la_SOURCES = ${libndn_c_la_SOURCES} ${ndn_ind_cpp_headers} \
   src/encoding/tlv-0_1-wire-format.cpp \
   src/encoding/tlv-0_1_1-wire-format.cpp \
   src/encoding/tlv-0_2-wire-format.cpp \
+  src/encoding/tlv-0_3-wire-format.cpp \
   src/encoding/tlv-decoder.hpp \
   src/encoding/tlv-encoder.hpp \
   src/encoding/tlv-wire-format.cpp \
@@ -445,6 +449,7 @@ libndn_ind_la_SOURCES = ${libndn_c_la_SOURCES} ${ndn_ind_cpp_headers} \
   src/lite/signature-lite.cpp \
   src/lite/encoding/element-listener-lite.cpp \
   src/lite/encoding/tlv-0_2-wire-format-lite.cpp \
+  src/lite/encoding/tlv-0_3-wire-format-lite.cpp \
   src/lite/encrypt/encrypted-content-lite.cpp \
   src/lite/encrypt/algo/aes-algorithm-lite.cpp \
   src/lite/encrypt/algo/des-algorithm-lite.cpp \
