--- a/Makefile.in
+++ b/Makefile.in
@@ -229,6 +229,7 @@ am_libndn_c_la_OBJECTS = $(am__objects_1) contrib/apache/apr_base64.lo \
 	src/c/interest_c.lo src/c/name_c.lo src/c/network-nack_c.lo \
 	src/c/registration-options.lo src/c/encoding/element-reader.lo \
 	src/c/encoding/tlv-0_2-wire-format_c.lo \
+	src/c/encoding/tlv-0_3-wire-format_c.lo \
 	src/c/encoding/tlv/tlv-control-parameters.lo \
 	src/c/encoding/tlv/tlv-control-response.lo \
 	src/c/encoding/tlv/tlv-data.lo \
@@ -274,6 +275,7 @@ am__objects_2 = $(am__objects_1) contrib/apache/apr_base64.lo \
 	src/c/interest_c.lo src/c/name_c.lo src/c/network-nack_c.lo \
 	src/c/registration-options.lo src/c/encoding/element-reader.lo \
 	src/c/encoding/tlv-0_2-wire-format_c.lo \
+	src/c/encoding/tlv-0_3-wire-format_c.lo \
 	src/c/encoding/tlv/tlv-control-parameters.lo \
 	src/c/encoding/tlv/tlv-control-response.lo \
 	src/c/encoding/tlv/tlv-data.lo \
@@ -315,6 +317,7 @@ am_libndn_ind_la_OBJECTS = $(am__objects_2) $(am__objects_1) \
 	src/encoding/tlv-0_1-wire-format.lo \
 	src/encoding/tlv-0_1_1-wire-format.lo \
 	src/encoding/tlv-0_2-wire-format.lo \
+	src/encoding/tlv-0_3-wire-format.lo \
 	src/encoding/tlv-wire-format.lo src/encoding/wire-format.lo \
 	src/encoding/der/der-exception.lo src/encoding/der/der-node.lo \
 	src/encrypt/access-manager-v2.lo src/encrypt/consumer.lo \
@@ -345,6 +348,7 @@ am_libndn_ind_la_OBJECTS = $(am__objects_2) $(am__objects_1) \
 	src/lite/signature-lite.lo \
 	src/lite/encoding/element-listener-lite.lo \
 	src/lite/encoding/tlv-0_2-wire-format-lite.lo \
+	src/lite/encoding/tlv-0_3-wire-format-lite.lo \
 	src/lite/encrypt/encrypted-content-lite.lo \
 	src/lite/encrypt/algo/aes-algorithm-lite.lo \
 	src/lite/encrypt/algo/des-algorithm-lite.lo \
@@ -955,6 +959,7 @@ am__depfiles_remade = contrib/apache/$(DEPDIR)/apr_base64.Plo \
 	src/c/$(DEPDIR)/registration-options.Plo \
 	src/c/encoding/$(DEPDIR)/element-reader.Plo \
 	src/c/encoding/$(DEPDIR)/tlv-0_2-wire-format_c.Plo \
+	src/c/encoding/$(DEPDIR)/tlv-0_3-wire-format_c.Plo \
 	src/c/encoding/tlv/$(DEPDIR)/tlv-control-parameters.Plo \
 	src/c/encoding/tlv/$(DEPDIR)/tlv-control-response.Plo \
 	src/c/encoding/tlv/$(DEPDIR)/tlv-data.Plo \
@@ -991,6 +996,7 @@ am__depfiles_remade = contrib/apache/$(DEPDIR)/apr_base64.Plo \
 	src/encoding/$(DEPDIR)/tlv-0_1-wire-format.Plo \
 	src/encoding/$(DEPDIR)/tlv-0_1_1-wire-format.Plo \
 	src/encoding/$(DEPDIR)/tlv-0_2-wire-format.Plo \
+	src/encoding/$(DEPDIR)/tlv-0_3-wire-format.Plo \
 	src/encoding/$(DEPDIR)/tlv-wire-format.Plo \
 	src/encoding/$(DEPDIR)/wire-format.Plo \
 	src/encoding/der/$(DEPDIR)/der-exception.Plo \
@@ -1034,6 +1040,7 @@ am__depfiles_remade = contrib/apache/$(DEPDIR)/apr_base64.Plo \
 	src/lite/$(DEPDIR)/signature-lite.Plo \
 	src/lite/encoding/$(DEPDIR)/element-listener-lite.Plo \
 	src/lite/encoding/$(DEPDIR)/tlv-0_2-wire-format-lite.Plo \
+	src/lite/encoding/$(DEPDIR)/tlv-0_3-wire-format-lite.Plo \
 	src/lite/encrypt/$(DEPDIR)/encrypted-content-lite.Plo \
 	src/lite/encrypt/algo/$(DEPDIR)/aes-algorithm-lite.Plo \
 	src/lite/encrypt/algo/$(DEPDIR)/des-algorithm-lite.Plo \
@@ -1959,6 +1966,7 @@ ndn_ind_cpp_headers = \
   include/ndn-ind/encoding/tlv-0_1-wire-format.hpp \
   include/ndn-ind/encoding/tlv-0_1_1-wire-format.hpp \
   include/ndn-ind/encoding/tlv-0_2-wire-format.hpp \
+  include/ndn-ind/encoding/tlv-0_3-wire-format.hpp \
   include/ndn-ind/encoding/tlv-wire-format.hpp \
   include/ndn-ind/encoding/wire-format.hpp \
   include/ndn-ind/encrypt/access-manager-v2.hpp \
@@ -2001,6 +2009,7 @@ ndn_ind_cpp_headers = \
   include/ndn-ind/lite/encoding/element-listener-lite.hpp \
   include/ndn-ind/lite/encoding/tlv-0_1_1-wire-format-lite.hpp \
   include/ndn-ind/lite/encoding/tlv-0_2-wire-format-lite.hpp \
+  include/ndn-ind/lite/encoding/tlv-0_3-wire-format-lite.hpp \
   include/ndn-ind/lite/encrypt/encrypted-content-lite.hpp \
   include/ndn-ind/lite/encrypt/algo/aes-algorithm-lite.hpp \
   include/ndn-ind/lite/encrypt/algo/des-algorithm-lite.hpp \
@@ -2144,6 +2153,7 @@ libndn_c_la_SOURCES = ${ndn_ind_c_headers} \
   src/c/encoding/element-listener.h \
   src/c/encoding/element-reader.c src/c/encoding/element-reader.h \
   src/c/encoding/tlv-0_2-wire-format_c.c src/c/encoding/tlv-0_2-wire-format.h \
+  src/c/encoding/tlv-0_3-wire-format_c.c src/c/encoding/tlv-0_3-wire-format.h \
   src/c/encoding/tlv/tlv-control-parameters.c src/c/encoding/tlv/tlv-control-parameters.h \
   src/c/encoding/tlv/tlv-control-response.c src/c/encoding/tlv/tlv-control-response.h \
   src/c/encoding/tlv/tlv-data.c src/c/encoding/tlv/tlv-data.h \
@@ -2215,6 +2225,7 @@ libndn_ind_la_SOURCES = ${libndn_c_la_SOURCES} ${ndn_ind_cpp_headers} \
   src/encoding/tlv-0_1-wire-format.cpp \
   src/encoding/tlv-0_1_1-wire-format.cpp \
   src/encoding/tlv-0_2-wire-format.cpp \
+  src/encoding/tlv-0_3-wire-format.cpp \
   src/encoding/tlv-decoder.hpp \
   src/encoding/tlv-encoder.hpp \
   src/encoding/tlv-wire-format.cpp \
@@ -2260,6 +2271,7 @@ libndn_ind_la_SOURCES = ${libndn_c_la_SOURCES} ${ndn_ind_cpp_headers} \
   src/lite/signature-lite.cpp \
   src/lite/encoding/element-listener-lite.cpp \
   src/lite/encoding/tlv-0_2-wire-format-lite.cpp \
+  src/lite/encoding/tlv-0_3-wire-format-lite.cpp \
   src/lite/encrypt/encrypted-content-lite.cpp \
   src/lite/encrypt/algo/aes-algorithm-lite.cpp \
   src/lite/encrypt/algo/des-algorithm-lite.cpp \
@@ -2772,6 +2784,9 @@ src/c/encoding/element-reader.lo: src/c/encoding/$(am__dirstamp) \
 src/c/encoding/tlv-0_2-wire-format_c.lo:  \
 	src/c/encoding/$(am__dirstamp) \
 	src/c/encoding/$(DEPDIR)/$(am__dirstamp)
+src/c/encoding/tlv-0_3-wire-format_c.lo:  \
+	src/c/encoding/$(am__dirstamp) \
+	src/c/encoding/$(DEPDIR)/$(am__dirstamp)
 src/c/encoding/tlv/$(am__dirstamp):
 	@$(MKDIR_P) src/c/encoding/tlv
 	@: > src/c/encoding/tlv/$(am__dirstamp)
@@ -2976,6 +2991,8 @@ src/encoding/tlv-0_1_1-wire-format.lo: src/encoding/$(am__dirstamp) \
 	src/encoding/$(DEPDIR)/$(am__dirstamp)
 src/encoding/tlv-0_2-wire-format.lo: src/encoding/$(am__dirstamp) \
 	src/encoding/$(DEPDIR)/$(am__dirstamp)
+src/encoding/tlv-0_3-wire-format.lo: src/encoding/$(am__dirstamp) \
+	src/encoding/$(DEPDIR)/$(am__dirstamp)
 src/encoding/tlv-wire-format.lo: src/encoding/$(am__dirstamp) \
 	src/encoding/$(DEPDIR)/$(am__dirstamp)
 src/encoding/wire-format.lo: src/encoding/$(am__dirstamp) \
@@ -3105,6 +3122,9 @@ src/lite/encoding/element-listener-lite.lo:  \
 	src/lite/encoding/$(am__dirstamp) \
 	src/lite/encoding/$(DEPDIR)/$(am__dirstamp)
 src/lite/encoding/tlv-0_2-wire-format-lite.lo:  \
+	src/lite/encoding/$(am__dirstamp) \
+	src/lite/encoding/$(DEPDIR)/$(am__dirstamp)
+src/lite/encoding/tlv-0_3-wire-format-lite.lo:  \
 	src/lite/encoding/$(am__dirstamp) \
 	src/lite/encoding/$(DEPDIR)/$(am__dirstamp)
 src/lite/encrypt/$(am__dirstamp):
@@ -4500,6 +4520,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/c/$(DEPDIR)/registration-options.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/c/encoding/$(DEPDIR)/element-reader.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/c/encoding/$(DEPDIR)/tlv-0_2-wire-format_c.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@src/c/encoding/$(DEPDIR)/tlv-0_3-wire-format_c.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/c/encoding/tlv/$(DEPDIR)/tlv-control-parameters.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/c/encoding/tlv/$(DEPDIR)/tlv-control-response.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/c/encoding/tlv/$(DEPDIR)/tlv-data.Plo@am__quote@ # am--include-marker
@@ -4536,6 +4557,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/encoding/$(DEPDIR)/tlv-0_1-wire-format.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/encoding/$(DEPDIR)/tlv-0_1_1-wire-format.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/encoding/$(DEPDIR)/tlv-0_2-wire-format.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@src/encoding/$(DEPDIR)/tlv-0_3-wire-format.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/encoding/$(DEPDIR)/tlv-wire-format.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/encoding/$(DEPDIR)/wire-format.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/encoding/der/$(DEPDIR)/der-exception.Plo@am__quote@ # am--include-marker
@@ -4579,6 +4601,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/lite/$(DEPDIR)/signature-lite.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/lite/encoding/$(DEPDIR)/element-listener-lite.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/lite/encoding/$(DEPDIR)/tlv-0_2-wire-format-lite.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@src/lite/encoding/$(DEPDIR)/tlv-0_3-wire-format-lite.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/lite/encrypt/$(DEPDIR)/encrypted-content-lite.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/lite/encrypt/algo/$(DEPDIR)/aes-algorithm-lite.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/lite/encrypt/algo/$(DEPDIR)/des-algorithm-lite.Plo@am__quote@ # am--include-marker
@@ -7584,6 +7607,7 @@ distclean: distclean-recursive
 	-rm -f src/c/$(DEPDIR)/registration-options.Plo
 	-rm -f src/c/encoding/$(DEPDIR)/element-reader.Plo
 	-rm -f src/c/encoding/$(DEPDIR)/tlv-0_2-wire-format_c.Plo
+	-rm -f src/c/encoding/$(DEPDIR)/tlv-0_3-wire-format_c.Plo
 	-rm -f src/c/encoding/tlv/$(DEPDIR)/tlv-control-parameters.Plo
 	-rm -f src/c/encoding/tlv/$(DEPDIR)/tlv-control-response.Plo
 	-rm -f src/c/encoding/tlv/$(DEPDIR)/tlv-data.Plo
@@ -7620,6 +7644,7 @@ distclean: distclean-recursive
 	-rm -f src/encoding/$(DEPDIR)/tlv-0_1-wire-format.Plo
 	-rm -f src/encoding/$(DEPDIR)/tlv-0_1_1-wire-format.Plo
 	-rm -f src/encoding/$(DEPDIR)/tlv-0_2-wire-format.Plo
+	-rm -f src/encoding/$(DEPDIR)/tlv-0_3-wire-format.Plo
 	-rm -f src/encoding/$(DEPDIR)/tlv-wire-format.Plo
 	-rm -f src/encoding/$(DEPDIR)/wire-format.Plo
 	-rm -f src/encoding/der/$(DEPDIR)/der-exception.Plo
@@ -7663,6 +7688,7 @@ distclean: distclean-recursive
 	-rm -f src/lite/$(DEPDIR)/signature-lite.Plo
 	-rm -f src/lite/encoding/$(DEPDIR)/element-listener-lite.Plo
 	-rm -f src/lite/encoding/$(DEPDIR)/tlv-0_2-wire-format-lite.Plo
+	-rm -f src/lite/encoding/$(DEPDIR)/tlv-0_3-wire-format-lite.Plo
 	-rm -f src/lite/encrypt/$(DEPDIR)/encrypted-content-lite.Plo
 	-rm -f src/lite/encrypt/algo/$(DEPDIR)/aes-algorithm-lite.Plo
 	-rm -f src/lite/encrypt/algo/$(DEPDIR)/des-algorithm-lite.Plo
@@ -8020,6 +8046,7 @@ maintainer-clean: maintainer-clean-recursive
 	-rm -f src/c/$(DEPDIR)/registration-options.Plo
 	-rm -f src/c/encoding/$(DEPDIR)/element-reader.Plo
 	-rm -f src/c/encoding/$(DEPDIR)/tlv-0_2-wire-format_c.Plo
+	-rm -f src/c/encoding/$(DEPDIR)/tlv-0_3-wire-format_c.Plo
 	-rm -f src/c/encoding/tlv/$(DEPDIR)/tlv-control-parameters.Plo
 	-rm -f src/c/encoding/tlv/$(DEPDIR)/tlv-control-response.Plo
 	-rm -f src/c/encoding/tlv/$(DEPDIR)/tlv-data.Plo
@@ -8056,6 +8083,7 @@ maintainer-clean: maintainer-clean-recursive
 	-rm -f src/encoding/$(DEPDIR)/tlv-0_1-wire-format.Plo
 	-rm -f src/encoding/$(DEPDIR)/tlv-0_1_1-wire-format.Plo
 	-rm -f src/encoding/$(DEPDIR)/tlv-0_2-wire-format.Plo
+	-rm -f src/encoding/$(DEPDIR)/tlv-0_3-wire-format.Plo
 	-rm -f src/encoding/$(DEPDIR)/tlv-wire-format.Plo
 	-rm -f src/encoding/$(DEPDIR)/wire-format.Plo
 	-rm -f src/encoding/der/$(DEPDIR)/der-exception.Plo
@@ -8099,6 +8127,7 @@ maintainer-clean: maintainer-clean-recursive
 	-rm -f src/lite/$(DEPDIR)/signature-lite.Plo
 	-rm -f src/lite/encoding/$(DEPDIR)/element-listener-lite.Plo
 	-rm -f src/lite/encoding/$(DEPDIR)/tlv-0_2-wire-format-lite.Plo
+	-rm -f src/lite/encoding/$(DEPDIR)/tlv-0_3-wire-format-lite.Plo
 	-rm -f src/lite/encrypt/$(DEPDIR)/encrypted-content-lite.Plo
 	-rm -f src/lite/encrypt/algo/$(DEPDIR)/aes-algorithm-lite.Plo
 	-rm -f src/lite/encrypt/algo/$(DEPDIR)/des-algorithm-lite.Plo
